--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongoose": "^5.5.4",
-    "mongoose-sequence": "^5.0.1"
+    "mongoose-sequence": "^5.0.1",
+    "nodemailer": "^6.2.1"
   }
 }
