--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "mongodb": "^3.2.7",
     "mongoose": "^5.6.0",
     "mongoose-sequence": "^5.0.1",
     "nodemailer": "^6.2.1"
